assets/css/styles.css
/* ... */
.lock-scroll {
    overflow-y: hidden;
}
.page-body {
    width: 100%;
    flex: 1 0 auto;
    background-color: transparent;
    position: absolute;
    top: 120px;
    z-index: 10;
    color: #fff;
}
.page-wrapper {
    height: 100%;
    display: flex;
    flex-direction: column;
}
.who-we-are, .what-we-do, .our-clients, .contact-us {
    display: none;
}
.body2, .body3, .body4, .body5, .body6 {
    opacity: 0;
    display: none;
    position: relative;
}

.video2 {
  height: calc(100vh - 220px);
}
.absolute-title {
  position: absolute;
  width: 100%;
  z-index: 10;
  top: 0;
}
.video-overlay {
  position: absolute;
  top: 0;
  left: 0;
  content: '';
  height: 100%;
  width: 100%;
  background-color: #000;
}
.person-box:first-child {
  padding-left: 0;
}
.person-box:last-child {
  padding-right: 0;
}
.who-we-are-body {
  padding-top: 0;  
}
.who-we-are-body {
  display: flex;
  align-items: center;
  width: 100%;
  justify-content: space-between;
}
.person-box {
  padding: 0 15px;
  text-align: center;
  /* text-shadow: 2px 2px rgb(0 0 0 / 30%); */
}
.person-box:first-child {
  padding-left: 0;
}
.absolute-y-center {
  transform: translateY(-50%);
  top: 50%;
}
.person-name {
  font-weight: 700;
  font-size: 135%;
}
.person-role {
  font-size: 75%;
  padding: 5px 0;
}

.what-we-do-logos { 
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  width: 100%;
  padding-top: 20px;
}
.what-we-do-logos i {
  font-size: 200%;
  padding-bottom: 15px;
}
.logo-box {
  text-align: center;
  padding: 0 15px;
  flex-basis: 33%;
  width: 33.33%;
}
.logo-box:first-child {  
  padding-left: 0;
}
.logo-box:last-child {  
  padding-right: 0;
}
.logo-box:nth-child(4) {
  /* padding-top: 100px; */
}
.logo-box:nth-child(1n+4) {
  padding-top: 50px;
}
.mission-body-text input{ 
  background-color: rgba(255,255,255,0.15);
  border: 1px solid #fff;
  padding: 8px;
  width: 100%;
  color: #fff;
}
.mission-body-text input::placeholder {
  color: #fff;
}
.contact-label {
  padding: 10px 0;
}
.contact-label:first-child {
  padding-top: 0;
}
.contact-label:last-child {
  padding-bottom: 0;
}
.message-area {
  width: 100%;
  background-color: rgba(255,255,255,0.15);
  border: 1px solid #fff;
  max-width: 100%;
  color: #fff;
  min-width: 100%;
  max-height: 250px;
  min-height: 100px;
  padding: 8px;
}
.message-area::placeholder {
  color: #fff;
}
.submit-btn {
  margin-top: 20px;
  background-color: transparent;
  border: 1px solid #fff;
  width: 100%;
  max-width: 300px;
  padding: 8px;
  text-align: center;
  cursor: pointer;
  background-color: rgba(255,255,255,0.15);
}
.background-overlay {
  background-color: #000;
  opacity: .1;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: calc(100vh - 220px);
  z-index: 1;
}

@media only screen and (max-width: 768px) {
  .background-overlay {  
    height: calc((var(--vh, 1vh) * 100) - 211px);
  }
  .who-we-are-body {
    display: flex;
    align-items: center;
    width: 100%;
    align-items: center; 
    flex-wrap: wrap;
  }
  .person-box {
    width: 33.33%;
    padding: 0 15px;
    text-align: center;
    /* text-shadow: 2px 2px rgb(0 0 0 / 30%); */
  }   
  .person-box:nth-child(3){
    padding-right: 0;
  }
  .person-box:nth-child(4){
    margin-left: auto;
    padding-left: 0;
    margin-top: 20px;
  }
  .person-box:nth-child(5){
    margin-right: auto;
    margin-top: 20px;
  }
  .video2 {
    height: calc((var(--vh, 1vh) * 100) - 211px);
  }
  .logo-box:nth-child(1n+4) {
    padding-top: 22px;
  }
  .logo-subtitle {
    height: 50px;
  }
  .page-body-what-we-do, .mobile-top-section {
    top: 75px;
  }
  .submit-btn {
    max-width: 100%;
  }
}
.image-placeholder {
  width: 100%;
  background-image: url('./../images/ocean.png');
  background-size: cover;
  background-position: center;
}

